[package]
name = "threaty-rs"
version = "0.7.3"
edition = "2018"
authors = ["Raphael Dray <dray.raph@gmail.com>"]
categories = ["api-bindings", "web-programming::http-client"]
description = "Combine multiples CTI APIs in Rust to help performing analysis"
documentation = "" # TODO
readme = "README.md"
homepage = "" # TODO
repository = "https://github.com/MrrRaph/threaty-rs"
license = "Apache-2.0"
keywords = ["shodan-api", "censys-api", "censys", "shodan", "cti"]
exclude = ["/ci", "/images", ".*", "main.rs"]

[dependencies]
reqwest = { version = "0.11.8", features = ["gzip", "brotli", "deflate", "json"] }
strum = "0.23.0"
strum_macros = "0.23"
base64 = "0.13.0"
serde_json = "1.0.73"

tokio = { version = "1.15.0", features = ["full"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[dev-dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde_json = "1.0.73"
tokio = { version = "1.15.0", features = ["full"] }

[lib]
name = "threaty"
path = "src/lib.rs"